--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,10 +26,12 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:drawableLeft="@drawable/ic_baseline_lock_24"/>
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign in"
+        android:textColor="#fff"
+        android:background="@drawable/custom_button"
         android:id="@+id/bLogin"/>
     <TextView
         android:layout_width="wrap_content"
