--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -45,6 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Register"
+        android:textColor="#fff"
+        android:background="@drawable/custom_button"
         android:id="@+id/bRegister"
         />
 </LinearLayout>
