--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -34,26 +34,36 @@
 
 
     <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="228dp" />
 
+
+        android:id="@+id/progressBar"
+        android:rotation="-90"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:indeterminateOnly="false"
+        tools:progress="20"
+        android:max="100"
+        android:progressDrawable="@drawable/circle" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <Button
-            android:layout_width="0dp"
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="Logout"
+            android:textColor="#fff"
+            android:background="@drawable/custom_button"
             android:id="@+id/bLogout"/>
-        <Button
-            android:layout_width="0dp"
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#fff"
+            android:background="@drawable/custom_button"
             android:layout_weight="2"
+
             android:text="Try again"
             android:id="@+id/bTry"/>
     </LinearLayout>
